# flake8-badbear

./: .flake8  README.md  badbear.py  setup.cfg
tests/: test_badbear.py
