[metadata]
name = flake8_badbear
version = 0.0.1
description = flake8 plugin which checks for additional bad codes 
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/trungtv/flake8_badbear
author = Tran Viet Trung 
author_email = mr.trungtv@gmail.com
license = MIT
license_files = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython

[options]
py_modules = flake8_badbear
install_requires =
    flake8>=5
python_requires = >=3.8

[options.entry_points]
flake8.extension =
    YTT=flake8_badbear:Plugin

[bdist_wheel]
universal = True

[coverage:run]
plugins = covdefaults

[mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true

[mypy-testing.*]
disallow_untyped_defs = false

[mypy-tests.*]
disallow_untyped_defs = false
